--- a/extension/package.json
+++ b/extension/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.89.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-markdown": "^10.1.0"
   }
 }
