Updated ai tasks

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -8,7 +8,9 @@
     "activeTab",
     "sidePanel",
     "tabs",
-    "scripting"
+    "scripting",
+    "downloads",
+    "clipboardWrite"
   ],
   "host_permissions": [
     "https://chat.openai.com/*",
